--- a/store/src/app/product-detail/product-detail.component.html
+++ b/store/src/app/product-detail/product-detail.component.html
@@ -1,16 +1,20 @@
 <div class="mat-elevation-z2 container">
-    <div class="row">
-      <div class="col" *ngFor="let product of items">
-        <mat-card>
-          <mat-card-header>
-            <mat-card-title>{{ product.title }}</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <p>$ {{ product.price }}</p>
-            <button mat-button color="primary" (click)="addToCart(product)">Add to cart</button>
-            <button mat-button color="primary" routerLink="/home/{{product.id}}">details</button>
-          </mat-card-content>
-        </mat-card>
-      </div>
+  <div class="row">
+    <div class="col" *ngFor="let product of items">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{ product.title }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="product-info">
+          <p>$ {{ product.price }}</p>
+
+        </mat-card-content>
+        <div class="product-image-container">
+          <button mat-button color="primary" (click)="addToCart(product)">Add to cart</button>
+          <button mat-button color="primary" routerLink="/home/{{product.id}}">details</button>
+          <img src="{{product.image}}" alt="{{product.title}}" class="product-image">
+        </div>
+      </mat-card>
     </div>
   </div>
+</div>
